# PuriPuly-heart-plus

./: .all-contributorsrc  .coderabbit.yaml  .env.local.example  .gitignore  AGENTS.md  CONTEXT.md  PuriPulyHeart.exe - Shortcut.lnk  README.ja.md  README.ko.md  README.md  README.zh-CN.md  build puri.bat  build.spec  build_log.txt  installer.iss  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml  release-template.md
.github/workflows/: deploy-broker-direct.yml  maintenance-broker-abuse-controls.yml  maintenance-broker-d1-cleanup.yml  push-ci.yml  release.yml
agents/logs/: .gitignore
agents/scripts/: analyze_frame_timing.py
broker/: README.md  package.json  wrangler.jsonc
broker/deploy/: fingerprint-bootstrap.template.sql
broker/migrations/: 0000_define_broker_persistent_state.sql  0001_add_abuse_hook_state.sql  0001_harden_installation_public_inputs.sql  0002_add_entitlement_verified_hardware_snapshot.sql  0003_add_abuse_runtime_state_and_issue_success_events.sql  0004_add_discord_oauth_managed_issue.sql  0005_add_referral_persistence_foundation.sql  0006_harden_referral_reward_operations.sql  0007_simplify_referral_id_checks.sql
broker/scripts/: prepare-talk-together-pass-backfill.mjs  render-fingerprint-bootstrap-sql.mjs  render-production-wrangler-config.mjs
broker/src/: abuse-controls.ts  abuse-monitoring.ts  app.ts  broker-error.ts  contract.ts  discord-alerts.ts  discord-managed-issue.ts  discord-oauth.ts  fingerprint-salt.ts  index.ts  managed-state.ts  openrouter-issue.ts  openrouter-management.ts  openrouter-user-id.ts  persistence.ts  preflight-retention.ts  public-input.ts  referral.ts  scheduled.ts  trial-handshake.ts  trial-policy.ts
broker/tests/: abuse-config.spec.ts  challenge-route.spec.ts  challenge-verify-normalization.spec.ts  cost-accounting.spec.ts  daily-report.spec.ts  deploy-automation.spec.ts  device-key-mismatch.spec.ts  discord-alerts.spec.ts  discord-issue-concurrency.spec.ts  discord-issue-route.spec.ts  discord-oauth.spec.ts  discord-schema.spec.ts  discord-start-route.spec.ts  duplicate-suppression.spec.ts  entitlement-schema.spec.ts  error-envelope.spec.ts  error-recovery.spec.ts  fingerprint-salt.spec.ts  foundation.spec.ts  hosting.spec.ts  issuance-cap.spec.ts  issue-budget-and-model.spec.ts  issue-idempotency.spec.ts  policy.spec.ts  (+37 more)
docs/: ARCHITECTURE.md  adr-2026-04-12-windows-soxr-packaging-contract.md  adr-2026-04-13-openrouter-fallback-source-lock-and-managed-key-contract.md  adr-2026-04-28-agpl-license-transition.md  adr-2026-05-29-windows-microphone-default-host-api.md
native/overlay/: Cargo.toml
native/overlay/src/: bridge.rs  lib.rs  logging.rs  main.rs  manifest.rs  openvr.rs  runtime.rs  state.rs
native/overlay/src/renderer/: backend.rs  cache.rs  font_resolver.rs  glyph_run.rs  layout.rs  mod.rs  types.rs
native/overlay/tests/: renderer.rs  runtime.rs  state.rs
prompts/: translation_prompt.md
(+311 files in other folders)
