[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puripuly-heart"
version = "2.1.2"
description = "LLM-based real-time translator for VRChat"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = [
  "LICENSE",
  "src/puripuly_heart/data/THIRD_PARTY_NOTICES.txt",
  "src/puripuly_heart/data/licenses/COPYING.LGPL-2.1.txt",
]
requires-python = ">=3.12,<3.14"
dependencies = [
  "numpy>=2.0",
  "janus>=2.0",
  "cryptography>=41.0",
  "python-osc>=1.9.0",
  "PyAudioWPatch; platform_system == 'Windows'",
  "sounddevice>=0.5.0",
  "onnxruntime>=1.18.0",
  "google-genai>=1.56.0",
  "grpcio",
  "dashscope",
  "websockets",
  "deepgram-sdk>=5.0.0,<6.0.0",
  "sherpa-onnx>=1.12.36",
  "keyring>=25.0",
  "flet==0.28.3",
  "flet-desktop==0.28.3",
  "httpx>=0.27",
  "soxr==1.0.0",
  "deepl>=1.18.0",
  "pyinstaller>=6.17.0",
  "pypinyin>=0.55.0",
  "pykakasi>=2.3.0",
  "cutlet>=0.5.0",
  "fugashi>=1.5.2",
  "unidic-lite>=1.0.8",
  "langdetect>=1.0.9",
  "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=1.3",
  "ruff>=0.6.0",
  "black>=24.4.0",
  "pre-commit>=3.7.0",
]
build = [
  "cmake>=3.31",
  "libclang>=18.1",
  "pyinstaller>=6.0",
  "scikit-build-core>=0.10",
  "nanobind>=2",
  "setuptools_scm[toml]>=6.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -s"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E701"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
puripuly_heart = ["data/**/*"]
