[package]
name = "puripuly-heart-overlay"
version = "2.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "puripuly_heart_overlay"
path = "src/lib.rs"

[[bin]]
name = "PuriPulyHeartOverlay"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"

[target.'cfg(windows)'.dependencies]
openvr_sys = "2.1.3"
windows-numerics = "0.3.1"
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
